# prog_tech

./: run.sh
task0/: README.md  run.sh
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  test.cpp
task3/: CMakeLists.txt
task4/include/: .Tree.h.swp
task4/src/02-tree/: .Tree.cpp.swp
task4/src/03-weather/: .Weather.cpp.swp
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  CMakeLists.txt  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: .TreeTestCase.h.swp  TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.h
task5/cmake-with-flask/: Dockerfile
task5/cmake-with-flask/C/: CMakeLists.txt
